--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,19 @@
   <groupId>org.katas</groupId>
   <artifactId>order-receipt-baseline</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <packaging>jar</packaging>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+    <packaging>jar</packaging>
 
   <name>order-receipt-baseline</name>
   <url>http://maven.apache.org</url>
